--- a/Project_Tank/Config/DefaultEngine.ini
+++ b/Project_Tank/Config/DefaultEngine.ini
@@ -10,6 +10,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/BP/BP_TankGameModeBase.BP_TankGameModeBase_C
+EditorStartupMap=/Game/Maps/Arena_1.Arena_1
+GameDefaultMap=/Game/Maps/Arena_1.Arena_1
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -56,5 +58,3 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
-
