--- a/Project_Tank/Config/DefaultInput.ini
+++ b/Project_Tank/Config/DefaultInput.ini
@@ -42,8 +42,12 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
 +AxisMappings=(AxisName="MoveAltitude",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveAzimut",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="MoveAltitude",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="MoveAzimut",Scale=1.000000,Key=Gamepad_RightX)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
