--- a/Project_Tank/Config/DefaultInput.ini
+++ b/Project_Tank/Config/DefaultInput.ini
@@ -43,11 +43,23 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
 +AxisMappings=(AxisName="MoveAltitude",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveAzimut",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="MoveAltitude",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="MoveAzimut",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="MoveForwardTrack_SX",Scale=1.000000,Key=Q)
++AxisMappings=(AxisName="MoveForwardTrack_SX",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
++AxisMappings=(AxisName="MoveForwardTrack_DX",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveForwardTrack_DX",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
++AxisMappings=(AxisName="MoveForwardTrack_SX",Scale=-1.000000,Key=Gamepad_LeftShoulder)
++AxisMappings=(AxisName="MoveForwardTrack_DX",Scale=-1.000000,Key=Gamepad_RightShoulder)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Move Right",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=D)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
